--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
@@ -28,7 +30,8 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.4",
     "slugify": "^1.6.6",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
