--- a/frontend/Kreacion_app/package.json
+++ b/frontend/Kreacion_app/package.json
@@ -41,6 +41,7 @@
     "card-validator": "^9.0.0",
     "formik": "^2.4.5",
     "jarallax": "^2.1.4",
+    "lucide-react": "^0.451.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
